chore: disable forbidigo linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -244,7 +244,6 @@ linters:
     - errorlint # finds code that will cause problems with the error wrapping scheme introduced in Go 1.13
     - exhaustive # checks exhaustiveness of enum switch statements
     - fatcontext # detects nested contexts in loops
-    - forbidigo # forbids identifiers
     - funlen # tool for detection of long functions
     - gocheckcompilerdirectives # validates go compiler directive comments (//go:)
     - gochecknoglobals # checks that no global variables exist
@@ -298,6 +297,8 @@ linters:
     - usestdlibvars # detects the possibility to use variables/constants from the Go standard library
     - wastedassign # finds wasted assignment statements
     - whitespace # detects leading and trailing whitespace
+
+    #- forbidigo # [forbids prints, which we use a lot] forbids identifiers
 
     ## you may want to enable
     #- decorder # checks declaration order and count of types, constants, variables and functions
