--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,10 +14,10 @@ on:
 
 jobs:
   CodeQL-Build:
-
     runs-on: ubuntu-latest
 
     permissions:
+      actions: read
       contents: read
       security-events: write
       pull-requests: read
