--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 env:
-  KURTOSIS_VERSION: '1.4.1'
+  KURTOSIS_VERSION: 'latest'
   GO_VERSION: '1.22.4'
 
 
@@ -24,13 +24,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+        uses: ./.github/actions/kurtosis-install
+        with:
+          version: ${{ env.KURTOSIS_VERSION }}
 
       - name: Run Package with default args
         run: |
@@ -50,13 +46,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+        uses: ./.github/actions/kurtosis-install
+        with:
+          version: ${{ env.KURTOSIS_VERSION }}
 
       - name: Run example '${{ matrix.example }}'
         run: make ${{ matrix.example }}
@@ -70,13 +62,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
       - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+        uses: ./.github/actions/kurtosis-install
+        with:
+          version: ${{ env.KURTOSIS_VERSION }}
 
       - name: Kurtosis Lint
         run: make kurtosis_lint
@@ -119,13 +107,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+        uses: ./.github/actions/kurtosis-install
+        with:
+          version: ${{ env.KURTOSIS_VERSION }}
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
@@ -145,13 +129,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+        uses: ./.github/actions/kurtosis-install
+        with:
+          version: ${{ env.KURTOSIS_VERSION }}
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
