--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -15,7 +15,7 @@
 #    curl --range 0-2097151 -L https://srs-mainnet.s3.amazonaws.com/kzg/g1.point -o resources/g1.point
 #    curl --range 0-4194303 -L https://srs-mainnet.s3.amazonaws.com/kzg/g2.point -o resources/g2.point
 #    curl -L https://srs-mainnet.s3.amazonaws.com/kzg/g2.point.powerOf2 -o resources/g2.point.powerOf2
-# 4. Run `devnet start`
+# 4. Run `avs-devnet start`
 
 deployments:
   # NOTE: this script also deploys EigenLayer contracts
