--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,4 +164,4 @@ jobs:
         run: |
           cp examples/eigenda.yaml eigenda/devnet.yaml
           cd eigenda/
-          devnet start
+          avs-devnet start
