--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -9,7 +9,7 @@
 # 0. Ensure you have the latest version of the devnet (see the README for how to install)
 # 1. Clone the https://github.com/Layr-Labs/hello-world-avs repo
 # 2. Copy this file inside that repo (on the root)
-# 3. While inside that repo, run `devnet start hello_world_local.yaml`
+# 3. While inside that repo, run `avs-devnet start hello_world_local.yaml`
 
 deployments:
   - name: EigenLayer
