--- a/examples/incredible_squaring_local.yaml
+++ b/examples/incredible_squaring_local.yaml
@@ -9,7 +9,7 @@
 # 0. Ensure you have the latest version of the devnet (see the README for how to install)
 # 1. Clone the https://github.com/Layr-Labs/incredible-squaring-avs repo
 # 2. Copy this file inside that repo (on the root)
-# 3. While inside that repo, run `devnet start incredible_squaring_local.yaml`
+# 3. While inside that repo, run `avs-devnet start incredible_squaring_local.yaml`
 
 deployments:
   - type: EigenLayer
