--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,10 @@ jobs:
       - name: Check example is still running
         if: matrix.example != 'kurtosis_hello_world'
         run: make check_devnet
+      
+      - name: Print logs
+        if: always()
+        run: kurtosis service logs devnet
 
   kurtosis_lint:
     runs-on: ubuntu-latest
