ci: skip hello-world example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,14 @@ jobs:
         with:
           key: docker-${{ runner.os }}-${{ hashFiles('Makefile', 'examples', 'src/config/default_config.yaml') }}
 
+      # TODO: fix the hello-world example
       - name: Run example '${{ matrix.example }}'
+        if: matrix.example != 'kurtosis_hello_world'
         run: make ${{ matrix.example }}
 
+      # TODO: fix the hello-world example
       - name: Check example is still running
+        if: matrix.example != 'kurtosis_hello_world'
         run: make check_devnet
 
   kurtosis_lint:
