--- a/src/config/default_config.yaml
+++ b/src/config/default_config.yaml
@@ -25,6 +25,6 @@ ethereum_package:
   network_params:
     seconds_per_slot: 3
   participants:
-    - el_type: besu
-      el_image: hyperledger/besu:latest
+    - el_type: reth
+      el_image: ghcr.io/paradigmxyz/reth
   
