--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -31,7 +31,7 @@ deployments:
   - name: hello-world-avs
     repo: "."
     contracts_path: "contracts"
-    script: script/HelloWorldDeployer.s.sol
+    script: script/HelloWorldDeployer.s.sol:HelloWorldDeployer
     env:
       # NOTE: this is used inside the deployer script
       PRIVATE_KEY: "{{.deployer_private_key}}"
